# brazilian-running-results-pipeline

./: .gitignore  README.md
infra/: .gitignore  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
infra/modules/bastion_ssm/: main.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
spider/: .env.example  .gitignore  example_logger_usage.py  main.py  pyproject.toml
spider/config/: config.yml  logger_config.py
spider/src/connections/: postgres.py
spider/src/database/connections/: README.md  __init__.py  postgres.py
spider/src/database/migrations/: migration.sql  run_migration.py
spider/src/extractors/: base.py  event_name_extractor.py
spider/src/parses/: event_name_parser.py
spider/src/storage/: event_name_storage.py
spider/test/: test_db_connection.py  test_postgres_connection.py
